# template-esp32

./: .env  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
src/: main.rs
